2013-10-07  Per Bothner  <per@bothner.com>

	* PrimProcedure.java: Use methodForInvoke for reflective
	application as well as compilation - i.e. generally when
	calling Method#getDeclaringClass.
	(getDeclaringClass): New convenience method.

2013-10-05  Jamison Hope  <jrh@theptrgroup.com>

	* PrimProcedure.java (disassemble): Fall back to system
	ClassLoader if Class#getClassLoader returns null.  This avoids a
	NullPointerException when invoking disassemble on methods of
	system classes.

2013-10-07  Per Bothner  <per@bothner.com>

	* Declaration.java (patchSymbolFromSet): New method.
	* Language.java (declFromField): May need to set EXTERNAL_ACCESS
	for module-methods as well as variables.

	* QuoteExp.java (compilation):  Optimization for primitive value,
	if the target is objectType.

2013-09-22  Per Bothner  <per@bothner.com>

	* ApplicationMainSupport.java (commandName): New field.
	(setArgs): Set commandName if unset and the
	kawa.command.name property is set.

2013-09-18  Per Bothner  <per@bothner.com>

	* ApplicationMainSupport.java (setArgs): Don't set
	command-line-arguments in environment - use normal Scheme.initScheme
	mechanism.  This makes variable available at compile-time,
	avoiding warnings.

2013-09-16  Per Bothner  <per@bothner.com>

	* Compilation.java (defaultClassFileVersion): Add JAVA8 support.

2013-09-07  Per Bothner  <per@bothner.com>

	* PrimProcedure.java (mostSpecific): Moved from MethodProc.
	Limited arguments to PrimProcedure, so we can implement
	the check-for-abstract-methods part of the JLS specification.
	(isAbstract): New method.

	* Language.java (getTypeor): Don't treat ObjectExp as
	a type specifier.  This fixes  Savannah bug #39945: "Too few
	arguments" warning when declaring an anonymous class in a let block"

2013-09-05  Per Bothner  <per@bothner.com>

	* PrimProcedure.java (compileArgs): Better handling of varargs.

2013-09-04  Per Bothner  <per@bothner.com>

	* Compilation.java (warnVoidUsed): New option.